tests/ui/async-await/higher-ranked-auto-trait-10.assumptions.stderr
error[E0308]: mismatched types
  --> $DIR/higher-ranked-auto-trait-10.rs:32:5
   |
LL |     Box::new(async move { get_foo(x).await })
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected enum `Result<&_, _>`
              found enum `Result<&_, _>`

error: implementation of `Send` is not general enough
  --> $DIR/higher-ranked-auto-trait-10.rs:32:5
   |
LL |     Box::new(async move { get_foo(x).await })
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Send` is not general enough
   |
   = note: `Send` would have to be implemented for the type `&str`
   = note: ...but `Send` is actually implemented for the type `&'0 str`, for some specific lifetime `'0`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
